# APALens

./: .dockerignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: adapters.py  app.py  exceptions.py  http_adapter.py
tests/: conftest.py  test_adapters.py  test_exceptions.py
